kubernetes/apps/argo-system/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argo-system
spec:
  hostnames:
  - argocd.home-ops.nl
  parentRefs:
  - name: external
    namespace: kube-system
  rules:
  - backendRefs:
    - name: argocd-server
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
